# razrabot

./: .env.dist  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
parser/: main.py
parser/commands/: __init__.py  parser.py
parser/services/: __init__.py  keywords.py  parse.py
